# blacksite-node

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  main.rs  security.rs  state.rs
src/components/: GeneratorModal.tsx  LockScreen.tsx  SetupView.tsx  VaultView.tsx
src/lib/: tauri.ts
